
message TaintQueryUniqueLabelSet {
    required uint64 ptr = 1;
    repeated uint32 label = 2;
}

message SrcInfo {
    required uint32 filename = 1;
    required uint32 linenum = 2;
    required uint32 astnodename = 3;
}     

message TaintQuery {
    required uint64 ptr = 1;
    required uint32 tcn = 2;
    required uint32 offset = 3;
}

message AttackPoint {
    required uint32 info = 1;
}

optional TaintQueryUniqueLabelSet taint_query_unique_label_set = 33;
optional TaintQuery taint_query = 34;
optional SrcInfo src_info = 35;



message TaintQueryHypercall {
    required uint64 buf = 1;
    required uint32 len = 2;
    repeated uint32 data = 3;
    required uint32 num_tainted = 4;
}

optional TaintQueryHypercall taint_query_hypercall = 38;

optional AttackPoint attack_point = 39;