
optional bool tainted_branch = 36;